--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -396,7 +396,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/bookshelf
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2160,6 +2160,7 @@ RecentsFiles=C:/UE5/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/in
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
@@ -2281,6 +2282,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf.Old_Dusty_Bookshelf;
+RecentlyPlaced=/Game/Assets/Amy/Asset/doublebass_Case/Doublebasscase_close_cbm.Doublebasscase_close_cbm;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile4.SM_WallTile4;
@@ -2299,8 +2302,6 @@ RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowTile.SM_WindowTile;
 RecentlyPlaced=/Game/Assets/Tashan/stairs_wallpaper_2.stairs_wallpaper_2;
 RecentlyPlaced=/Game/Assets/Tashan/stairs_wallpaper.stairs_wallpaper;
-RecentlyPlaced=/Game/Assets/Tashan/M4/mast_wood.mast_wood;
-RecentlyPlaced=/Game/Assets/Tashan/stairs/stairs.stairs;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2418,26 +2419,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/test
-MRUItem1=/Game/Assets/Aziz/Assets/SM_WallTile4
-MRUItem2=/Game/Living_Room
-MRUItem3=/Game/Assets/Aziz/Assets/SM_WindowFrame
-MRUItem4=/Game/Assets/Aziz/Assets/SM_RoofSupport
-MRUItem5=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem6=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem7=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem8=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem9=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem10=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem13=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem14=/Game/Assets/Tashan/mm_master
-MRUItem15=/Game/M4/Tashan/Assets/MF_Wallpaper
-MRUItem16=/Game/M4/Tashan/Assets/mat_blend
-MRUItem17=/Game/M4/Tashan/Assets/stairs_wallpaper
-MRUItem18=/Game/Assets/Tashan/Decals/mm_decal_leak1_2
-MRUItem19=/Game/Assets/Tashan/Decals/mm_decal_leak1
+MRUItem0=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf_Mat
+MRUItem1=/Game/Assets/Amy/Asset/doublebass_Case/lambert3
+MRUItem2=/Game/Assets/Amy/Asset/doublebass_Case/lambert2
+MRUItem3=/Game/Assets/Amy/test
+MRUItem4=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem5=/Game/Living_Room
+MRUItem6=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem7=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem8=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem9=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem10=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem11=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem12=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem13=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem16=/Game/Assets/Tashan/stairs_wallpaper
+MRUItem17=/Game/Assets/Tashan/mm_master
+MRUItem18=/Game/M4/Tashan/Assets/MF_Wallpaper
+MRUItem19=/Game/M4/Tashan/Assets/mat_blend
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
