--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -396,7 +396,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/roundtable_megascan
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/violincase
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2281,6 +2281,9 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/violincase/ukphae2aw_LOD4.ukphae2aw_LOD4;
+RecentlyPlaced=/Game/Assets/Amy/Asset/sofa/sofa.sofa;
+RecentlyPlaced=/Game/Assets/Amy/Asset/sofa/old_leather_sofa.old_leather_sofa;
 RecentlyPlaced=/Game/Assets/Amy/Asset/roundtable_megascan/uc1kebzfa_LOD4.uc1kebzfa_LOD4;
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf.Old_Dusty_Bookshelf;
@@ -2298,9 +2301,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameFloor.SM_WindowFrameFloor;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowFrameRoof.SM_WindowFrameRoof;
 RecentlyPlaced=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K.MI_Varnished_Wooden_Floor_udukafko_1K;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WallTile3.SM_WallTile3;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_TopSegment.SM_TopSegment;
-RecentlyPlaced=/Game/Assets/Aziz/Assets/SM_WindowTile.SM_WindowTile;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2418,26 +2418,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/roundtable_megascan/_mat_defaultMat
-MRUItem1=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf_Spiderwebs_Mat
-MRUItem2=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf_Mat
-MRUItem3=/Game/Assets/Amy/Asset/doublebass_Case/lambert3
-MRUItem4=/Game/Assets/Amy/Asset/doublebass_Case/lambert2
-MRUItem5=/Game/Assets/Amy/test
-MRUItem6=/Game/Assets/Aziz/Assets/SM_WallTile4
-MRUItem7=/Game/Living_Room
-MRUItem8=/Game/Assets/Aziz/Assets/SM_WindowFrame
-MRUItem9=/Game/Assets/Aziz/Assets/SM_RoofSupport
-MRUItem10=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
-MRUItem11=/Game/Assets/Aziz/Assets/SM_TopSegment
-MRUItem12=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
-MRUItem13=/Game/Assets/Aziz/Assets/SM_WallTile3
-MRUItem14=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem15=/Game/Assets/Tashan/stairs_wallpaper_2
-MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem18=/Game/Assets/Tashan/stairs_wallpaper
-MRUItem19=/Game/Assets/Tashan/mm_master
+MRUItem0=/Game/Assets/Amy/Asset/violincase/_mat__mat__mat_defaultMat
+MRUItem1=/Game/Assets/Amy/Asset/sofa/old_leather_sofa
+MRUItem2=/Game/Assets/Amy/Asset/sofa/sofa
+MRUItem3=/Game/Assets/Amy/Asset/roundtable_megascan/_mat_defaultMat
+MRUItem4=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf_Spiderwebs_Mat
+MRUItem5=/Game/Assets/Amy/Asset/bookshelf/Old_Dusty_Bookshelf_Mat
+MRUItem6=/Game/Assets/Amy/Asset/doublebass_Case/lambert3
+MRUItem7=/Game/Assets/Amy/Asset/doublebass_Case/lambert2
+MRUItem8=/Game/Assets/Amy/test
+MRUItem9=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem10=/Game/Living_Room
+MRUItem11=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem12=/Game/Assets/Aziz/Assets/SM_RoofSupport
+MRUItem13=/Game/Assets/Aziz/Assets/Bookshelf/Books_low_LowPoly3_OcclusionRoughnessMetallic
+MRUItem14=/Game/Assets/Aziz/Assets/SM_TopSegment
+MRUItem15=/Game/Megascans/Surfaces/Varnished_Wooden_Floor_udukafko/MI_Varnished_Wooden_Floor_udukafko_1K
+MRUItem16=/Game/Assets/Aziz/Assets/SM_WallTile3
+MRUItem17=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem18=/Game/Assets/Tashan/stairs_wallpaper_2
+MRUItem19=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
