--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [EditorStartup]
 LastLevel=/Game/Living_Room
 LastLevel=/Game/abandonedroom_Migration
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Attic
 None=======
 None=======
 
@@ -109,7 +109,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+Object="\"Object\" "
 None=======
 None=======
 FbxImportUI="\"Object\" "
@@ -118,7 +118,7 @@ Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Objec
 MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+StreamableRenderAsset="\"Object\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -302,8 +302,7 @@ EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m
-OpenAssetsAtExit=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m
+OpenAssetsAtExit=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor.Trimsheet_1001_BaseColor
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -380,7 +379,7 @@ MRUItem9=/Game/Living_Room
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/violincase
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Modular/MainStructureModularAssets
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Modular/Attic_Parts
 None=======
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
@@ -415,7 +414,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Modular/MainStructureModularAssets
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Charlotte
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1208,7 +1207,7 @@ WindowSize=X=1308.000 Y=748.000
 WindowSize=X=1290.000 Y=730.000
 WindowSize=X=1304.000 Y=744.000
 WindowSize=X=1309.600 Y=749.600
-WindowSize=X=1325.333 Y=765.333
+WindowSize=X=1327.333 Y=767.333
 None=======
 None=======
 None=======
@@ -2404,26 +2403,26 @@ None=======
 None=======
 None=======
 None=======
-RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m;
+RecentlyPlaced=/Game/Assets/Charlotte/M_Cupboard.M_Cupboard;
+RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_Mat.T_Dirty_Wooden_Planks_slxoejhp_4K_Mat;
+RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D.T_Dirty_Wooden_Planks_slxoejhp_4K_D;
+RecentlyPlaced=/Game/Megascans/Surfaces/Wooden_Panel_teilffxg/MI_Wooden_Panel_teilffxg_4K.MI_Wooden_Panel_teilffxg_4K;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
+RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
+RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Stairs_Attic.Stairs_Attic;
+RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Attic_Wall_Horizontal_2m1.Walls_Attic_Wall_Horizontal_2m1;
+RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Attic_Wall_Horizontal_2m2.Walls_Attic_Wall_Horizontal_2m2;
+RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Bumpy_02.Walls_Modular_01_Wall_Bumpy_02;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Bumpy_01.Walls_Modular_01_Wall_Bumpy_01;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_1m.Walls_Modular_01_Wall_Horizontal_1m;
-RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_Door.Walls_Modular_01_Wall_Smooth_Door;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Modular_01_Wall_Bumpy_02.Walls_Modular_01_Wall_Bumpy_02;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Modular_01_Wall_Bumpy_01.Walls_Modular_01_Wall_Bumpy_01;
-RecentlyPlaced=/Game/Assets/Modular/SewingRoom/MA_AR_Kit_sm_UWall_01.MA_AR_Kit_sm_UWall_01;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/room_v5_polySurface1.room_v5_polySurface1;
-RecentlyPlaced=/Game/Assets/Modular/SewingRoom/MA_AR_Kit_sm_wall_3x1.MA_AR_Kit_sm_wall_3x1;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2440,7 +2439,7 @@ LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
 bImportAnimations=False
-bImportMaterials=True
+bImportMaterials=False
 bImportTextures=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
@@ -2541,26 +2540,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem1=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem2=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem3=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem4=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem5=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem6=/Game/attic_migration
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem12=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem13=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
-MRUItem14=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem15=/Engine/EngineSky/SM_SkySphere
-MRUItem16=/Game/Assets/Tashan/stairs/stairs
-MRUItem17=/Game/Assets/Aziz/Assets/SM_WallTile4
-MRUItem18=/Game/Living_Room
-MRUItem19=/Game/Assets/Aziz/Assets/SM_WindowFrame
+MRUItem0=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem1=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem2=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem3=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem5=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem6=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem7=/Game/attic_migration
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem13=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem14=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
+MRUItem15=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem16=/Engine/EngineSky/SM_SkySphere
+MRUItem17=/Game/Assets/Tashan/stairs/stairs
+MRUItem18=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem19=/Game/Living_Room
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2676,6 +2675,7 @@ None=======
 /Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D.T_Dirty_Wooden_Planks_slxoejhp_4K_D=1
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m=1
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m=1
+/Game/Assets/Charlotte/Trimsheet_1001_BaseColor.Trimsheet_1001_BaseColor=1
 
 [MaterialEditor]
 PrimType=1
