--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [EditorStartup]
 LastLevel=/Game/Living_Room
 LastLevel=/Game/abandonedroom_Migration
-LastLevel=/Game/Attic
+LastLevel=/Game/Assets/Amy/test
 None=======
 None=======
 
@@ -275,7 +275,7 @@ DecalComponent="\"Object\" "
 MaterialExpressionAppendVector="\"Object\" "
 Door_Group_SM_Door_04_low_Blueprint_C="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
-Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" "
+Info=
 DirectionalLight="\"Object\" "
 Light="\"Object\" "
 DecalActor="\"Object\" "
@@ -301,8 +301,7 @@ EditPivotToolProperties="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor.Trimsheet_1001_BaseColor
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -366,20 +365,20 @@ SnapScaleEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Attic
-MRUItem1=/Game/attic_migration
-MRUItem2=/Game/abandonedroom_V2
-MRUItem3=/Game/abandonedroom_night
-MRUItem4=/Game/abandonedroom_Migration
-MRUItem5=/Game/Stairwell
-MRUItem6=/Game/stairwellblock
-MRUItem7=/Game/testmap
-MRUItem8=/Game/Assets/Amy/test
+MRUItem0=/Game/Assets/Amy/test
+MRUItem1=/Game/Attic
+MRUItem2=/Game/attic_migration
+MRUItem3=/Game/abandonedroom_V2
+MRUItem4=/Game/abandonedroom_night
+MRUItem5=/Game/abandonedroom_Migration
+MRUItem6=/Game/Stairwell
+MRUItem7=/Game/stairwellblock
+MRUItem8=/Game/testmap
 MRUItem9=/Game/Living_Room
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/violincase
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Modular/Attic_Parts
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/rocking_horse
 None=======
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
@@ -414,7 +413,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Charlotte
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/rocking_horse
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2390,7 +2389,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,W
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 ExponentialHeightFog=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SkyLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
-DirectionalLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+DirectionalLight=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 SceneComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 CineCameraActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 
@@ -2403,6 +2402,9 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2.rockinghorse_UV2;
+RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse.rockinghorse;
+RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rocking_horse_lowpoly.rocking_horse_lowpoly;
 RecentlyPlaced=/Game/Assets/Charlotte/M_Cupboard.M_Cupboard;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_Mat.T_Dirty_Wooden_Planks_slxoejhp_4K_Mat;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D.T_Dirty_Wooden_Planks_slxoejhp_4K_D;
@@ -2420,9 +2422,6 @@ RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_Door.Walls_Modular_01_Wall_Smooth_Door;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2540,26 +2539,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
-MRUItem1=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem2=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem3=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem4=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem5=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem6=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem7=/Game/attic_migration
-MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem13=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem14=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
-MRUItem15=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem16=/Engine/EngineSky/SM_SkySphere
-MRUItem17=/Game/Assets/Tashan/stairs/stairs
-MRUItem18=/Game/Assets/Aziz/Assets/SM_WallTile4
-MRUItem19=/Game/Living_Room
+MRUItem0=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
+MRUItem1=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
+MRUItem2=/Game/Assets/Amy/test
+MRUItem3=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem4=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem5=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem6=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem8=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem9=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem10=/Game/attic_migration
+MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem16=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem17=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
+MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2
+MRUItem19=/Engine/EngineSky/SM_SkySphere
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
