--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -378,7 +378,7 @@ MRUItem9=/Game/Living_Room
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/violincase
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/rocking_horse
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/bench
 None=======
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
@@ -413,7 +413,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/rocking_horse
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/stool
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2402,6 +2402,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/bench/bench.bench;
+RecentlyPlaced=/Game/Assets/Amy/Asset/bench/ueigebjfa_LOD4.ueigebjfa_LOD4;
 RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2.rockinghorse_UV2;
 RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse.rockinghorse;
 RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rocking_horse_lowpoly.rocking_horse_lowpoly;
@@ -2420,8 +2422,6 @@ RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_1m.Walls_Modular_01_Wall_Horizontal_1m;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
-RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_Door.Walls_Modular_01_Wall_Smooth_Door;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2539,26 +2539,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
-MRUItem1=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
-MRUItem2=/Game/Assets/Amy/test
-MRUItem3=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
-MRUItem4=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem5=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem6=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem7=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem8=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem9=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem10=/Game/attic_migration
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem16=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem17=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
-MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem19=/Engine/EngineSky/SM_SkySphere
+MRUItem0=/Game/Assets/Amy/Asset/stool/stool
+MRUItem1=/Game/Assets/Amy/Asset/bench/bench
+MRUItem2=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
+MRUItem3=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
+MRUItem4=/Game/Assets/Amy/test
+MRUItem5=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem7=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem8=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem10=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem11=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem12=/Game/attic_migration
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem18=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem19=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
