--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -378,7 +378,7 @@ MRUItem9=/Game/Living_Room
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/violincase
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/bench
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Amy/Asset/stool
 None=======
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
@@ -413,7 +413,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/stool
+ContentBrowserDrawer.SelectedPaths=/Game/Assets/Amy/Asset/music_Stand
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2273,7 +2273,6 @@ RecentsFiles=E:/Program Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/Cont
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.Animation,MaterialEditorInstanceConstant.ParameterGroups.CloudColors,MaterialEditorInstanceConstant.ParameterGroups.Global,MaterialEditorInstanceConstant.ParameterGroups.Sky,MaterialEditorInstanceConstant.ParameterGroups.Sun,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,
@@ -2402,6 +2401,8 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Amy/Asset/stool/stool.stool;
+RecentlyPlaced=/Game/Assets/Amy/Asset/stool/vevhfe3bw_LOD4.vevhfe3bw_LOD4;
 RecentlyPlaced=/Game/Assets/Amy/Asset/bench/bench.bench;
 RecentlyPlaced=/Game/Assets/Amy/Asset/bench/ueigebjfa_LOD4.ueigebjfa_LOD4;
 RecentlyPlaced=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2.rockinghorse_UV2;
@@ -2420,8 +2421,6 @@ RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Bumpy_02.Walls_Modular_01_Wall_Bumpy_02;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Bumpy_01.Walls_Modular_01_Wall_Bumpy_01;
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m;
-RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_1m.Walls_Modular_01_Wall_Horizontal_1m;
-RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Door_01.Walls_Modular_01_Wall_Door_01;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2539,26 +2538,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Amy/Asset/stool/stool
-MRUItem1=/Game/Assets/Amy/Asset/bench/bench
-MRUItem2=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
-MRUItem3=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
-MRUItem4=/Game/Assets/Amy/test
-MRUItem5=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
-MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem7=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem8=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem10=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem11=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem12=/Game/attic_migration
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem18=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem19=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
+MRUItem0=/Game/Assets/Amy/Asset/music_Stand/music_stand
+MRUItem1=/Game/Assets/Amy/Asset/stool/stool
+MRUItem2=/Game/Assets/Amy/Asset/bench/bench
+MRUItem3=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse_UV2
+MRUItem4=/Game/Assets/Amy/Asset/rocking_horse/rockinghorse
+MRUItem5=/Game/Assets/Amy/test
+MRUItem6=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem7=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem8=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem9=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem11=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem12=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem13=/Game/attic_migration
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem17=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem18=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem19=/Engine/EngineSky/M_SimpleSkyDome
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2675,6 +2674,7 @@ None=======
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m=1
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m=1
 /Game/Assets/Charlotte/Trimsheet_1001_BaseColor.Trimsheet_1001_BaseColor=1
+/Game/Assets/Amy/Asset/music_Stand/music_stand.music_stand=1
 
 [MaterialEditor]
 PrimType=1
