--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -109,7 +109,7 @@ WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 Object="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 None=======
 None=======
 FbxImportUI="\"Object\" "
@@ -118,7 +118,7 @@ Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Objec
 MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Lightmass.LightmassSettings\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
-StreamableRenderAsset="\"Object\" "
+StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 MaterialExpressionConstant="\"Object\" "
 MaterialExpression="\"Object\" "
 MaterialExpressionScalarParameter="\"Object\" "
@@ -301,7 +301,7 @@ EditPivotToolProperties="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1194,6 +1194,7 @@ CineCameraActor.Replication=True
 CineCameraActor.HLOD=True
 CineCameraActor.Networking=True
 CineCameraActor.Actor=True
+Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
@@ -2381,9 +2382,9 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
-PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
-BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
-StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens|Mobile Depth of FieldAdvanced,PostProcessVolume.Lens.Lens|Mobile Depth of Field,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Color Grading.Color Grading|Temperature,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Color Grading.Color Grading|Shadows,PostProcessVolume.Color Grading.Color Grading|Midtones,PostProcessVolume.Color Grading.Color Grading|Highlights,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global IlluminationAdvanced,PostProcessVolume.Global Illumination.Global Illumination|Lumen Global Illumination,PostProcessVolume.Global Illumination.Global Illumination|Ray Tracing Global Illumination,PostProcessVolume.Reflections.Reflections|Lumen Reflections,PostProcessVolume.Reflections.Reflections|Screen Space Reflections,PostProcessVolume.Reflections.Reflections|Ray Tracing Reflections,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,PostProcessVolume.Rendering Features.Rendering Features|Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Ambient Occlusion,PostProcessVolume.Rendering Features.Rendering Features|Motion Blur,PostProcessVolume.Rendering Features.Rendering Features|Translucency,PostProcessVolume.Rendering Features.Rendering Features|Ray Tracing Translucency,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
+PostProcessVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+BrushComponent=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens
+StaticMeshActor=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 TriggerVolume=PostProcessVolume.TransformCommon.Transform,PostProcessVolume.Lens.Lens,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
@@ -2539,26 +2540,26 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Living_Room
-MRUItem1=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
-MRUItem2=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
-MRUItem3=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
-MRUItem4=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
-MRUItem5=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
-MRUItem6=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
-MRUItem7=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
-MRUItem8=/Game/attic_migration
-MRUItem9=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
-MRUItem10=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
-MRUItem11=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
-MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
-MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
-MRUItem14=/Engine/EngineSky/M_SimpleSkyDome
-MRUItem15=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
-MRUItem16=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem17=/Engine/EngineSky/SM_SkySphere
-MRUItem18=/Game/Assets/Tashan/stairs/stairs
-MRUItem19=/Game/Assets/Aziz/Assets/SM_WallTile4
+MRUItem0=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil
+MRUItem1=/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil
+MRUItem2=/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic
+MRUItem3=/Game/Living_Room
+MRUItem4=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
+MRUItem5=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
+MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
+MRUItem7=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D
+MRUItem8=/Game/Assets/Tashan/M4/Tashan/Assets/blockout/wood
+MRUItem9=/Game/Megascans/Surfaces/Dirty_Cast_In_Situ_Concrete_vcchfgx/MI_Dirty_Cast_In_Situ_Concrete_vcchfgx_4K
+MRUItem10=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/MI_Dirty_Wooden_Planks_slxoejhp_4K
+MRUItem11=/Game/attic_migration
+MRUItem12=/Game/Assets/Tashan/M4/Tashan/Assets/m_ss
+MRUItem13=/Game/Assets/Tashan/M4/Tashan/Assets/MF_Wallpaper
+MRUItem14=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend_Inst
+MRUItem15=/Game/Assets/Tashan/M4/Tashan/Assets/mat_blend
+MRUItem16=/Game/Assets/Tashan/M4/Tashan/Assets/WallPaper_basecolor
+MRUItem17=/Engine/EngineSky/M_SimpleSkyDome
+MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2_Inst
+MRUItem19=/Engine/EngineSky/M_Sky_Panning_Clouds2
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Charlotte/Door/Fabric/Fabric_01.Fabric_01=1
@@ -2675,6 +2676,9 @@ None=======
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m.Walls_Modular_01_Wall_Smooth_2m=1
 /Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m.Walls_Modular_01_Wall_Horizontal_2m=1
 /Game/Assets/Charlotte/Trimsheet_1001_BaseColor.Trimsheet_1001_BaseColor=1
+/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic.TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic=1
+/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil.MM_Yggdrasil=1
+/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil.SM_Yggdrasil=1
 
 [MaterialEditor]
 PrimType=1
