--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [EditorStartup]
 LastLevel=/Game/Living_Room
 LastLevel=/Game/abandonedroom_Migration
-LastLevel=/Game/Living_Room
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 None=======
 None=======
 
@@ -301,7 +301,7 @@ EditPivotToolProperties="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -483,6 +483,7 @@ Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
 Texture2D.Interchange=False
+Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
@@ -1193,7 +1194,6 @@ CineCameraActor.Replication=True
 CineCameraActor.HLOD=True
 CineCameraActor.Networking=True
 CineCameraActor.Actor=True
-Texture2D.Interchange =True
 
 [RootWindow]
 ScreenPosition=X=484.000 Y=296.000
