--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 [EditorStartup]
 LastLevel=/Game/Living_Room
 LastLevel=/Game/abandonedroom_Migration
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Living_Room
 None=======
 None=======
 
@@ -2402,6 +2402,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil.SM_Yggdrasil;
 RecentlyPlaced=/Game/Assets/Charlotte/M_Cupboard.M_Cupboard;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_Mat.T_Dirty_Wooden_Planks_slxoejhp_4K_Mat;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_D.T_Dirty_Wooden_Planks_slxoejhp_4K_D;
@@ -2421,7 +2422,6 @@ RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Walls_Modular_01_Wall_Smooth_1m.Walls_Modular_01_Wall_Smooth_1m;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2539,10 +2539,10 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil
-MRUItem1=/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil
-MRUItem2=/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic
-MRUItem3=/Game/Living_Room
+MRUItem0=/Game/Living_Room
+MRUItem1=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil
+MRUItem2=/Game/Assets/Aziz/Assets/Plaque/MM_Yggdrasil
+MRUItem3=/Game/Assets/Aziz/Assets/Plaque/TreeOfLife_low_DefaultMaterial_OcclusionRoughnessMetallic
 MRUItem4=/Game/Assets/Charlotte/Trimsheet_1001_BaseColor
 MRUItem5=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Horizontal_2m
 MRUItem6=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_2m
