--- a/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/MorriganHall/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -301,7 +301,7 @@ EditPivotToolProperties="\"Object\" "
 EditPivotToolActionPropertySet="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -412,7 +412,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Assets/Aziz/Assets/Plaque
+ContentBrowserDrawer.SelectedPaths=/Game/Megascans/3D_Assets/Wooden_Chest_udfkbb2qx
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -2402,6 +2402,7 @@ None=======
 None=======
 None=======
 None=======
+RecentlyPlaced=/Game/Megascans/3D_Assets/Wooden_Chest_udfkbb2qx/S_Wooden_Chest_udfkbb2qx_lod3.S_Wooden_Chest_udfkbb2qx_lod3;
 RecentlyPlaced=/Game/Assets/Aziz/Assets/Plaque/SM_Yggdrasil.SM_Yggdrasil;
 RecentlyPlaced=/Game/Assets/Charlotte/M_Cupboard.M_Cupboard;
 RecentlyPlaced=/Game/Megascans/Surfaces/Dirty_Wooden_Planks_slxoejhp/T_Dirty_Wooden_Planks_slxoejhp_4K_Mat.T_Dirty_Wooden_Planks_slxoejhp_4K_Mat;
@@ -2421,7 +2422,6 @@ RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_
 RecentlyPlaced=/Game/Assets/Modular/MainStructureModularAssets/Walls_Modular_01_Wall_Smooth_Door.Walls_Modular_01_Wall_Smooth_Door;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x1;
 RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x4;
-RecentlyPlaced=/Game/Assets/Modular/Attic_Parts/Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2.Wood_Floor_Modular_01_Floor_Ceiling_Wood_1x2;
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
